# retrofont

./: .gitignore  Cargo.toml  README.md
benches/: tdf_loading.rs
benches/data/: readme.txt
crates/: TheDrawFonts.md
crates/retrofont/: Cargo.toml  README.md  test_bundle.tdf
crates/retrofont-cli/: Cargo.toml  README.md
crates/retrofont-cli/src/: console.rs  main.rs
crates/retrofont/examples/: test_remove.rs
crates/retrofont/src/: convert.rs  error.rs  figlet.rs  font.rs  glyph.rs  lib.rs  tdf.rs  test_support.rs
crates/retrofont/tests/: convert_test.rs  create_bundle.rs  figlet_basic.rs  mod.rs  tdf_basic.rs
crates/retrofont/tests/figlet/: basic.rs  load.rs  tests.rs
crates/retrofont/tests/tdf/: basic.rs  container.rs  mod.rs
crates/retrofont/tests/unified/: mod.rs
examples/: render_horizontal.rs
