[workspace]
resolver = "2"
members = [
	"crates/retrofont",
	"crates/retrofont-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
license = "MIT or Apache-2.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
