[workspace]
resolver = "2"
members = [
	"crates/retrofont",
	"crates/retrofont-cli",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
license = "MIT OR Apache-2.0"
description = "Retro ASCII/ANSI art font toolkit for FIGlet and TheDraw formats"
repository = "https://github.com/mkrueger/retrofont"
keywords = ["ascii-art", "ansi", "figlet", "tdf", "thedraw"]
categories = ["text-processing", "command-line-utilities", "parser-implementations"]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
