[package]
name = "retrofont-cli"
version = "0.1.0"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
license = "MIT OR Apache-2.0"
description = "CLI for retrofont: render / convert / inspect"
repository = "https://github.com/mkrueger/icy_tools"

[[bin]]
name = "retrofont"
path = "src/main.rs"

[dependencies]
retrofont = { path = "../retrofont", features = ["tdf", "figlet", "convert"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
