[package]
name = "retrofont-cli"
version = "0.2.1"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
license = "MIT OR Apache-2.0"
description = "CLI for retrofont: Render and convert retro ASCII/ANSI art fonts"
repository = "https://github.com/mkrueger/retrofont"
keywords = ["ascii-art", "ansi", "figlet", "tdf", "thedraw"]
categories = ["text-processing", "command-line-utilities", "parser-implementations"]

[[bin]]
name = "retrofont"
path = "src/main.rs"

[dependencies]
retrofont = { version = "0.2.1", path = "../retrofont" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"