[package]
name = "retrofont"
version = "0.2.2"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
license = "MIT OR Apache-2.0"
description = "Retro terminal font toolkit: TDF/FIGlet parsing, rendering, conversion."
repository = "https://github.com/mkrueger/retrofont"
keywords = ["ascii-art", "ansi", "figlet", "tdf", "thedraw"]
categories = ["text-processing", "command-line-utilities", "parser-implementations"]

[features]
default = ["tdf", "figlet", "convert"]
tdf = []
figlet = []
convert = ["tdf", "figlet"]
color = []
serde = ["dep:serde"]

[dependencies]
thiserror = "2.0.17"
zip = "6.0.0"
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1"
criterion = "0.8.1"

[[bench]]
name = "tdf_loading"
harness = false
path = "../../benches/tdf_loading.rs"
